feat: Enhance Google Drive Upload API with admin setup and token management features

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,12 @@ GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-client-secret
 GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/callback
 
+# Optional: Default folder ID where all uploads will go
+# Get this from the Google Drive folder URL: https://drive.google.com/drive/folders/{FOLDER_ID}
+DEFAULT_FOLDER_ID=
+
+# Optional: Admin key for disconnecting the account (security measure)
+ADMIN_KEY=
+
 # Port for local development
 PORT=3000
