feat: Enhance token management and user feedback for Google Drive setup

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@ GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-client-secret
 GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/callback
 
+# Refresh token (required for Vercel/serverless deployment)
+# Get this by running the setup locally or from the callback after connecting Google account
+GOOGLE_REFRESH_TOKEN=
+ADMIN_EMAIL=
+
 # Optional: Default folder ID where all uploads will go
 # Get this from the Google Drive folder URL: https://drive.google.com/drive/folders/{FOLDER_ID}
 DEFAULT_FOLDER_ID=
