--- a/vercel.json
+++ b/vercel.json
@@ -9,12 +9,12 @@
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "/index.js",
-            "headers": {
-                "Access-Control-Allow-Origin": "*",
-                "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-                "Access-Control-Allow-Headers": "Content-Type, Authorization, X-Requested-With"
-            }
+            "methods": ["OPTIONS"],
+            "dest": "/index.js"
+        },
+        {
+            "src": "/api/(.*)",
+            "dest": "/index.js"
         },
         {
             "src": "/(.*)",
