--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,12 @@
 {
     "version": 2,
-    "functions": {
-        "index.js": {
-            "maxDuration": 60
-        }
-    },
     "builds": [
         {
             "src": "./index.js",
-            "use": "@vercel/node"
+            "use": "@vercel/node",
+            "config": {
+                "maxDuration": 60
+            }
         }
     ],
     "routes": [
